core: QUIK ATR implemented, deprecated classes removed